--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lag="en">
     <head>
         <title>Hello!</title>
     </head>
     <body>
-       <h1 style="color:blue">Welcome to my website</h1>
+       <h1 style="color:blue;">Welcome to my website</h1>
         <h2>Hello</h2>
         Hello, world!
     </body>
